fix overflow

--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -367,7 +367,7 @@ cursor: default;
 }
 
 #background {
-	position: absolute;
+	position: fixed;
 	top: 50%;
 	left: 50%;
 	min-width: 100%;
